Minor Code Optimization

--- a/src/main/java/com/selenium/config/config.properties
+++ b/src/main/java/com/selenium/config/config.properties
@@ -1,14 +1,12 @@
 # Environment = {local, grid}
-# Platform = {android, ios}
 
-TIMEOUT=20
-URL=http://www.seleniumeasy.com/test/basic-first-form-demo.html
-BROWSER=chrome
+timeout=30
 
-USERNAME=
-PASSWORD=
+appUrl=http://www.seleniumeasy.com/test/basic-first-form-demo.html
+browser=firefox
 
-SELENIUMSERVER=http://127.0.0.1:4444/wd/hub
+username=
+password=
 
-ENVIRONMENT=local
-PLATFORM=android
+seleniumGridServer=http://127.0.0.1:4444/wd/hub
+environment=local
